chore: wire wait-list form

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       Your AI‑powered sales agent that guides every lead to the finish line.
     </p>
     <a
-      href="#waitlist"
+      href="https://forms.gle/KtiR6GqLsCfYL4bS6" target="_blank"
       class="mt-8 inline-block rounded-2xl bg-indigo-500 py-3 px-6 text-lg font-semibold shadow-lg hover:bg-indigo-600 transition"
     >
       Join the wait‑list →
